Another fix
Firefox seems to add whitespace between table cells?? SO set font-size to 0 and that problem goes away.

--- a/github-calendar-responsive.css
+++ b/github-calendar-responsive.css
@@ -2,6 +2,9 @@
     display: none;
 }
 
+table {
+  font-size: 0px;
+}
 tr {
   line-height: 7px;
   height: 7px !important;
